chore(fix): fix align center issue for header cell

--- a/projects/dev-app/src/app/grid/grid-demo.component.scss
+++ b/projects/dev-app/src/app/grid/grid-demo.component.scss
@@ -15,6 +15,10 @@
     background-color: #cff4fc;
   }
 
+  .text-center {
+    text-align: center;
+  }
+
   &.fixed-height {
     height: 360px;
   }
