--- a/projects/extensions/grid/cell.scss
+++ b/projects/extensions/grid/cell.scss
@@ -1,6 +1,7 @@
 .mtx-grid-img {
-  display: block;
+  display: inline-block;
   width: 32px;
   border-radius: 4px;
+  vertical-align: middle;
   cursor: pointer;
 }
