--- a/projects/extensions/grid/grid.scss
+++ b/projects/extensions/grid/grid.scss
@@ -107,7 +107,7 @@
   }
 
   .mat-header-cell-inner {
-    display: flex;
+    display: inline-flex;
     align-items: center;
   }
 
